--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,11 @@
       <script src="/vendor/jquery-1.9.1.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
       <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <script src="/vendor/jquery.bsPhotoGallery.js"></script>
+      <link src="/vendor/jquery.bsPhotoGallery.css" rel = "stylesheet">
+
+
 
 
 
@@ -38,13 +43,13 @@
 <br/>
 <div class="mx-auto" style="width: 800px;">
     
-    <img src="https://pp.userapi.com/c840631/v840631879/8892/nApHK89joE4.jpg" alt="image" width="800" height="800" class="js-image_in_comments" style="width: 800px; height: 500px;">
+    <img src="/img/main.jpg" alt="image" width="800" height="800" class="js-image_in_comments" style="width: 800px; height: 500px;">
 
 
   </div>
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
 
 </head>
 
@@ -52,7 +57,6 @@
 
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
  
 
