--- a/views/photo.erb
+++ b/views/photo.erb
@@ -1,6 +1,78 @@
-
+<html>
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="/vendor/jquery-1.9.1.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <script src="/vendor/jquery.bsPhotoGallery.js"></script>
+      <link src="/vendor/jquery.bsPhotoGallery.css" rel = "stylesheet">
+
+
+
+
+
+<h1 class="text-center " style = "font-size: 50px">Konstantin Arefiev</h1>
+
+<ul class="nav nav-tabs justify-content-center" style = "font-size: 20px">
+  
+  <li class="nav-item">
+    <a name = "photo"   class="nav-link " href="/photo">PHOTO</a>
+  </li>
+  <li class="nav-item">
+    <a name = "video" class="nav-link" href="/video">VIDEO</a>
+  </li>
+  <li class="nav-item">
+    <a name = "blog" class="nav-link" href="/blog">BLOG</a>
+  </li>
+ <li class="nav-item">
+    <a name = "contacts" class="nav-link" href="/contacts">CONTACTS</a>
+  </li>
+ </ul>
+<br/>
+<div class="mx-auto" style="width: 800px;">
+  
+    
 
 
 </head>
+
+
+
+
+<body>
+
+<ul class="first">
+    <li>
+        <img alt="opex1"  src="img/opex1.jpg">
+        <p class="text">Optional text. This will also show in the modal</p>
+    </li>
+    <li>
+        <img alt="opex2" src="img/opex2.jpg">
+    </li>
+    <li>
+        <img alt= "opex3"  src="img/opex3.jpg">
+    </li>
+    </ul>
+
+<script>
+
+
+$(function() {
+
+  $('ul.first').bsPhotoGallery({
+    "classes" : "col-lg-2 col-md-4 col-sm-3 col-xs-4 col-xxs-12",
+    "hasModal" : true
+  });
+
+</script>
+
+
+</body>
+
+</html>
