--- a/views/video.erb
+++ b/views/video.erb
@@ -1,7 +1,7 @@
 <html>
 <head>
     
-
+<h> PHotos </h>
 
 </head>
 
@@ -29,10 +29,7 @@
 
 $(function() {
 
-  $('ul.first').bsPhotoGallery({
-    "classes" : "col-lg-2 col-md-4 col-sm-3 col-xs-4 col-xxs-12",
-    "hasModal" : true
-  });
+  $('ul.first').bsPhotoGallery()
 
    });
 
