--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,9 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	
+		
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+
+
 	    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	    <script src="/vendor/jquery-1.12.4.min.js"></script>
+
+
+	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	    
+
 	    <!-- Include all compiled plugins (below), or include individual files as needed -->
 	    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -22,8 +34,7 @@
 
 		<!-- gallery -->
 
-	    <script src="jquery.bsPhotoGallery.js"></script>
-		<link rel="stylesheet" href="jquery.bsPhotoGallery.css">
+
 
 
 
@@ -33,33 +44,39 @@
 		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
+
+
 	</head>
 	<body>
 		<div class="container">
 
 			<!-- Static navbar -->
-			<h1 class="text-center " style = "font-size: 50px">Konstantin Arefiev</h1>
+				<ul class="nav justify-content-center" >
+					  <li class="nav-item">
+					    <a class="nav-link active" style="font-size: 60px; color: grey;" href="/">Konstantin Arefiev</a>
+					  </li>
+
+			</ul>
+
+			<nav class="navbar navbar-default" role="navigation">
 
 
-			<nav class="navbar navbar-center" role="navigation">
-			  <div class="navbar-header">
-			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-			      <span class="sr-only">Toggle navigation</span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			    </button>
-			    
-			  </div>
+					<ul class="nav justify-content-center" >
+					  <li class="nav-item">
+					    <a class="nav-link active" style="font-size: 30px" href="/photo">PHOTO</a>
+					  </li>
+					  <li class="nav-item">
+					    <a class="nav-link" style="font-size: 30px" href="/video">VIDEO</a>
+					  </li>
+					  <li class="nav-item">
+					    <a class="nav-link" style="font-size: 30px" href="/blog">BLOG</a>
+					  </li>
 
-			  <br/>
-			  <div class="navbar-collapse collapse">
-			    <ul class="nav navbar-nav">
-			      <li><a href="/photo">PHOTO</a></li>
-			      <li><a href="/video">VIDEO</a></li>
-			      <li><a href="/blog">BLOG</a></li>
-			    </ul>
-			  </div><!--/.nav-collapse -->
+					</ul>
+
+
+
+
 			</nav>
 			<div>
 			      <%if @error then %>
@@ -71,4 +88,15 @@
 			
 
 	</div>
+
+	
+			
+	
+  
+
+
+
+	
+
   </body>
+
