--- a/views/photo.erb
+++ b/views/photo.erb
@@ -12,6 +12,14 @@
 <br/>
 
 
+<a data-fancybox="gallery"  href="img/opex1.jpg">
+    <img src="img/opex1.jpg" style ="width: 200px">
+</a>
+
+<a data-fancybox="gallery"   href="img/opex2.jpg">
+    <img src="img/opex2.jpg" style ="width: 300px">
+</a>
+
 
 
 
@@ -19,6 +27,7 @@
 
 
 $(function() {
+
 
 
 
