--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,3 +1,5 @@
+<!-- http://www.kirillumrikhin.com/-->
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -34,6 +36,10 @@
 
 		<!-- gallery -->
 
+		<link  href="dist/jquery.fancybox.min.css" rel="stylesheet">
+		<script src="dist/jquery.fancybox.min.js"></script>
+	
+
 
 
 
@@ -58,41 +64,32 @@
 
 			</ul>
 
-			<nav class="navbar navbar-default" role="navigation">
-
-
-					<ul class="nav justify-content-center" >
+					<ul class="nav justify-content-center">
 					  <li class="nav-item">
-					    <a class="nav-link active" style="font-size: 30px" href="/photo">PHOTO</a>
+					    <a class="nav-link active" style = "font-size: 25px; color: grey" href="/photo">PHOTO</a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" style="font-size: 30px" href="/video">VIDEO</a>
+					    <a class="nav-link" style = "font-size: 25px; color: grey" href="/video">VIDEO</a>
 					  </li>
 					  <li class="nav-item">
-					    <a class="nav-link" style="font-size: 30px" href="/blog">BLOG</a>
+					    <a class="nav-link" style = "font-size: 25px; color: grey" href="/blog">BLOG</a>
 					  </li>
-
+					
 					</ul>
 
 
-
-
-			</nav>
 			<div>
-			      <%if @error then %>
-			          <div class="alert alert-error"><%=@error%></div>
-			      <% end %>
-			      <%= yield %>
+			     			      <%= yield %>
 			</div>
 
 			
-
 	</div>
 
 	
 			
 	
-  
+  			
+
 
 
 
