--- a/views/blog.erb
+++ b/views/blog.erb
@@ -13,9 +13,11 @@
 
 <% @posts.each do |posts| %>
 
-<br/>
+
  <p> <%= posts.content %> </p>
-<p2> <a name = "post_id" href = "/details/<%= posts.id %>">Comments </a> <%= posts.created_at %> </p2>
+<p2> <a name = "post_id" href = "/details/<%= posts.id %>">Комментарии <%= posts.created_at %> </a> </p2>
+
+<br/><br/><br/><br/>
 <% end %>
 
 
@@ -25,7 +27,7 @@
 
 <form action = "/blog" method = "Post" role = "form">
 <br/>
-<textarea name = "content" class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder = "Введите свой текст" style = "width: 500px" ></textarea>
+<textarea name = "message[content]" class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder = "Введите свой текст" style = "width: 500px" ></textarea>
 <br/>
 
  <button type="submit" class="btn btn-primary">Submit</button>
