--- a/views/details.erb
+++ b/views/details.erb
@@ -1,32 +1,35 @@
 <html>
 
 <head>
-<h4>Post details </h4>
+
+
+<p2>Пост  <%= @post.created_at %></p2>
+
+<h2>  <%= @post.title %> </h2>
 </head>
 
 
-<h>
-
-<%= @post.content %>
 
 
-</h>
+
+
+
 
 
 
 <body>
- 		<h2>
+ <p2>
 
-
-
-		</h2>
+<%= @post.content %>
+</p2>
+	
 	
 	
 
 	<br/>
 
 
-</h2>
+
 
 </body>
 
