--- a/views/blog.erb
+++ b/views/blog.erb
@@ -23,7 +23,7 @@
 
 
 <div class="mx-auto" style="width: 500px;">
-<h2 style = "color: blue; " > Новый пост </h2>
+<h2 style = "color: lightgrey; " > Новый пост </h2>
 
 <form action = "/blog" method = "Post" role = "form">
 <br/>
