--- a/views/photo.erb
+++ b/views/photo.erb
@@ -20,7 +20,29 @@
     <img src="img/opex2.jpg" style ="width: 300px">
 </a>
 
+<a data-fancybox="gallery"   href="img/opex3.jpg">
+    <img src="img/opex3.jpg" style ="width: 200px">
+</a>
 
+<a data-fancybox="gallery"   href="img/opex4.jpg">
+    <img src="img/opex4.jpg" style ="width: 300px">
+</a>
+
+<a data-fancybox="gallery"   href="img/opex5.jpg">
+    <img src="img/opex5.jpg" style ="width: 300px">
+</a>
+
+<a data-fancybox="gallery"   href="img/opex6.jpg">
+    <img src="img/opex6.jpg" style ="width: 300px">
+</a>
+
+<a data-fancybox="gallery"   href="img/opex7.jpg">
+    <img src="img/opex7.jpg" style ="width: 200px">
+</a>
+
+<a data-fancybox="gallery"   href="img/opex8.jpg">
+    <img src="img/opex8.jpg" style ="width: 300px">
+</a>
 
 
 <script>
